--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
           <!--<li class="nav-item"><a class="nav-link" href="speakers.html" id="menuSpeakers"></a></li>
           <li class="nav-item"><a class="nav-link" href="schedule.html" id="menuSchedule"></a></li>-->
           <!-- <li class="nav-item"><a class="nav-link" href="sponsors.html" id="menuSponsors"></a></li>  -->
-          <li class="nav-item"><a class="nav-link" href="index.html" id="menuContact"></a></li>
+          <li class="nav-item"><a class="nav-link" href="mailto:info@sugsa.org.za?subject=SGZA Website Query: " id="menuContact"></a></li>
           <!-- <li class="nav-item cta mr-md-2"><a class="nav-link" id="menuButton">
               <ion-icon name="cart"></ion-icon> -->
             </a>
