--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       <div class="row mb-5">
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
-            <h2 class="ftco-heading-2">Virtual Regional Scrum Gathering&#8480; Cape Town</span></h2>
+            <h2 class="ftco-heading-2">Virtual </br> Regional Scrum Gathering&#8480; </br>Cape Town</span></h2>
             <p>Coming early 2022.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="https://twitter.com/sugsa" target="_blank"><span
@@ -14,24 +14,24 @@
             </ul>
           </div>
         </div>
-        <div class="col-md">
+       <!-- <div class="col-md">
           <div class="ftco-footer-widget mb-4 ml-md-5">
             <h2 class="ftco-heading-2">Useful Links</h2>
             <ul class="list-unstyled">
-              <!-- <li><a href="speakers.html" class="py-2 d-block">Speakers</a></li>
+               <li><a href="speakers.html" class="py-2 d-block">Speakers</a></li>
               <li><a href="schedule.html" class="py-2 d-block">Schedule</a></li>
               <li><a href="sponsors.html" class="py-2 d-block">Sponsors</a></li> -->
-              <!-- <li><a href="sponsors/scrum-alliance.html" class="py-2 d-block">Scrum Alliance</a></li>-->
+              <!-- <li><a href="sponsors/scrum-alliance.html" class="py-2 d-block">Scrum Alliance</a></li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Privacy</h2>
             <ul class="list-unstyled">
               <li><a href="privacy-policy.html" class="py-2 d-block">Privacy Policy</a></li>
               <li><a href="terms-and-conditions.html" class="py-2 d-block">Terms & conditions</a></li>
-              <li><a href="mailto:info@sugsa.org.za?subject=SGZA Website Query: " class="py-2 d-block">Contact Us</a></li>
+              <!-- <li><a href="mailto:info@sugsa.org.za?subject=SGZA Website Query: " class="py-2 d-block">Contact Us</a></li> -->
             </ul>
           </div>
         </div>
