--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,9 +40,9 @@
             <h2 class="ftco-heading-2">Have a Questions?</h2>
             <div class="block-23 mb-3">
               <ul>
-                <li><a href="contact.html"><span class="icon icon-globe"></span><span class="text">Contact
+                <!-- <li><a href="contact.html"><span class="icon icon-globe"></span><span class="text">Contact
                       Us!</span></a>
-                </li>
+                </li> -->
                 <li><a href="mailto:info@sugsa.org.za?subject=SGZA Website Query: "><span
                       class="icon icon-envelope"></span><span class="text">info@sugsa.org.za</span></a></li>
               </ul>
