--- a/_includes/countdown.html
+++ b/_includes/countdown.html
@@ -7,15 +7,15 @@ style="background-image: url('images/bg_2.jpg');">
     <div class="col-xl-10 mt-5 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
       <h1 class="mb-4 mt-5" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }"><span> Virtual
           <br>Regional </span><br><span>Scrum Gathering&#8480;</span><br>Cape Town</h1>
-      <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Coming Early 2022.
+      <p class="mb-4" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">Live, online 3 - 4 March 2022
       </p>
-      <!-- <div class="d-flex mb-3" id="timer">
+      <div class="d-flex mb-3" id="timer">
         <div class="time" id="days"></div>
         <div class="time pl-4" id="hours"></div>
         <div class="time pl-4" id="minutes"></div>
         <div class="time pl-4" id="seconds"></div>
       </div>
-    </div> -->
+    </div>
     <div class="col-md-4 heading-section ftco-animate text-center">
       <a class="btn btn-primary d-block px-2 py-3">Tickets On Sale Soon <ion-icon name="cart"></ion-icon></a>
     </div>
