--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
         <div class="col-md">
           <div class="ftco-footer-widget mb-4">
             <h2 class="ftco-heading-2">Virtual </br> Regional Scrum Gathering&#8480; </br>Cape Town</span></h2>
-            <p>Coming early 2022.</p>
+            <p>Live, online 3 - 4 March 2022.</p>
             <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
               <li class="ftco-animate"><a href="https://twitter.com/sugsa" target="_blank"><span
                     class="icon-twitter"></span></a></li>
