added virtual ts and cs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
     {% include header.html %}
     {% include countdown.html %}
+    {% include call-for-papers-summary.html %}
     <div class="page-content">
         <div>
             {{content}}
