--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-   
+<header id="site-header">
   <!-- START nav -->
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
     <div class="container">
@@ -31,3 +31,4 @@
     </div>
   </nav>
   <!-- END nav -->
+</header>
