--- a/_layouts/pageLayout.html
+++ b/_layouts/pageLayout.html
@@ -8,7 +8,11 @@
     <br/>
     <div class="page-content">
         <div>
+            <br/>
             {{content}}
+        </div>
+        <div class="box white">
+
         </div>
     </div>
 
