--- a/_layouts/privacy.html
+++ b/_layouts/privacy.html
@@ -10,7 +10,11 @@
     <br/>
     <div class="page-content">
         <div>
+            <br/>
             {{content}}
+        </div>
+        <div class="box white">
+
         </div>
     </div>
 
