changes before launching call for papers

--- a/_includes/call-for-papers-summary.html
+++ b/_includes/call-for-papers-summary.html
@@ -16,12 +16,13 @@
                     community of Agilists.</p>
 
                 <p>If you are interested in being a speaker, please check out our Call for Papers
-                    information page to submit your inspirational talks aligned to our theme of <strong>Welcoming Change</strong>.</p>
+                    information page to submit your inspirational talks aligned to our theme of <strong>Welcome
+                        Change</strong>.</p>
+                <br />
             </div>
             <div class="col-md-4 heading-section ftco-animate text-center justify-content-center">
                 <a class="btn btn-primary d-block px-2 py-3" href="call-for-papers.html">Call for Papers Information
-                    <span
-                            class="icon-arrow-down"></span></a>
+                    <span class="icon-arrow-down"></span></a>
             </div>
         </div>
     </div>
