--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,16 @@
 
     {% include header.html %}
     {% include countdown.html %}
+    <div class="box white">
+
+    </div>
     {% include call-for-papers-summary.html %}
     <div class="page-content">
         <div>
             {{content}}
+        </div>
+        <div class="box white">
+
         </div>
     </div>
 
